--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+ 
+  background-color: #242424;
+  width: 100%;
+  padding: 10px;
+  
 }
