--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,22 @@ body {
 }
 
 
+.glass{
+
+  
+    backdrop-filter: blur(8px) saturate(180%);
+    -webkit-backdrop-filter: blur(8px) saturate(180%);
+    background-color: rgba(237, 237, 251, 0.095);
+ 
+
+
+}
+@keyframes reaveal {
+  0% { width: 0ch; }
+  20% { width: 0ch; }
+  40% { width: 0ch; }
+  50% { width: 0ch; }
+  60% { width: 9ch; }
+  80% { width: 9ch; }
+  100% { width: 0ch; }
+}
