--- a/src/App.css
+++ b/src/App.css
@@ -49,9 +49,10 @@ body {
 .glass{
 
   
-    backdrop-filter: blur(8px) saturate(180%);
-    -webkit-backdrop-filter: blur(8px) saturate(180%);
-    background-color: rgba(237, 237, 251, 0.095);
+    backdrop-filter: blur(8px) saturate(180%) !important;
+    -webkit-backdrop-filter: blur(8px) saturate(180%) !important;
+    background-color: rgba(237, 237, 251, 0.095) !important;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px !important;
  
 
 
