--- a/src/App.css
+++ b/src/App.css
@@ -66,36 +66,25 @@ body {
   80% { width: 9ch; }
   100% { width: 0ch; }
 }
-
-
 /* HTML: <div class="loader"></div> */
 .loader {
-  width: 40px;
-  aspect-ratio: 1;
-  color: #f03355;
-  position: relative;
-  top:"45%";
-  left: "45%";
-  
- 
-  background:
-    conic-gradient(from 134deg at top   ,currentColor 92deg,#0000 0) top,
-    conic-gradient(from -46deg at bottom,currentColor 92deg,#0000 0) bottom;
-  background-size: 100% 50%;
-  background-repeat: no-repeat;
+  width: fit-content;
+  font-weight: bold;
+  font-family: monospace;
+  white-space: pre;
+
+  line-height: 1.2em;
+  height: 1.2em;
+  overflow: hidden;
 }
 .loader:before {
-  content:'';
-  position: absolute;
-  inset: 0;
-  --g:currentColor 14.5px,#0000 0 calc(100% - 14.5px),currentColor 0;
-  background:
-    linear-gradient( 45deg,var(--g)),
-    linear-gradient(-45deg,var(--g));
-   animation: l7 1.5s infinite cubic-bezier(0.3,1,0,1);
+  content:"Loading.. \AgodnLai...\Aoiaglni.. \ALiongad... \Agindola.. \Analoidg...";
+  white-space: pre;
+  display:inline-block;
+  animation: l38 2s infinite steps(6);
+ 
 }
-@keyframes l7 {
-   33%  {inset:-10px;transform: rotate(0deg)}
-   66%  {inset:-10px;transform: rotate(90deg)}
-   100% {inset:0    ;transform: rotate(90deg)}
+
+@keyframes l38 {
+  100%{transform: translateY(-100%)}
 }
