--- a/src/App.css
+++ b/src/App.css
@@ -109,9 +109,11 @@ backdrop-filter: blur(5px);
   78% {
     color: inherit;
     text-shadow: inherit;
+    opacity: 0;
   }
   79%{
-     color: #333;
+     color: #ffd300;
+      opacity: 0.4,
   }
   80% {
     
@@ -122,19 +124,27 @@ backdrop-filter: blur(5px);
     text-shadow: inherit;
   }
   82% {
-    color: #333;
+    color: #ffd300;
     text-shadow: none;
+     opacity: 0.4,
   }
   83% {
     color: inherit;
     text-shadow: inherit;
+     opacity: 0.4,
   }
   92% {
-    color: #333;
+    color: #ffd300;
     text-shadow: none;
   }
   92.5% {
     color: inherit;
     text-shadow: inherit;
   }
+    93% {
+        opacity: 0.4,
+    }
+    100% {
+        opacity: 0.9;
+    }
 }
